fix footer flickering gh-pages

--- a/assets/scss/_core.scss
+++ b/assets/scss/_core.scss
@@ -32,6 +32,7 @@
 
 html {
 	font-size: 62.5%;
+	height: 100%;
 }
 
 body {
@@ -43,6 +44,13 @@ body {
 	line-height: 1.1;
 	font-weight: 400;
 	-webkit-font-smoothing: antialiased;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+}
+
+main {
+	flex: 1 0 auto;
 }
 
 h1,
